# rec_task

./: .env  .env_compose  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: config.py
src/api/: app.py  experiments.py  resources.py
src/db/: db_models.py
src/db/alembic/: env.py
src/db/alembic/versions/: 313ea711456b_add_team_hirerchy_self_refrencial_fk.py  d637d5c66926_setup_associative_table_for_experiments_.py  dc96dbd93db4_create_experiment_table.py  dd33958b548b_create_team_table.py  eaad909233cf_fix_sample_ration_____sample_ratio.py
tests/: conftest.py  factories.py  test_experiments.py  test_models.py  test_teams.py
