[build-system]
requires = ['setuptools>63', 'setuptools-scm', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'rec-task-api'
description = 'Recruitement task API'
readme = 'README.md'
requires-python = '>=3.11'
version = "1.0.0"
dynamic = ['dependencies']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
test = []